--- a/my-app/package.json
+++ b/my-app/package.json
@@ -11,8 +11,10 @@
   },
   "dependencies": {
     "axios": "^1.4.0",
+    "normalize.css": "^8.0.1",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "sass": "^1.63.4"
   },
   "devDependencies": {
     "@types/react": "^18.0.37",
