--- a/my-app/package.json
+++ b/my-app/package.json
@@ -14,7 +14,8 @@
     "normalize.css": "^8.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "sass": "^1.63.4"
+    "sass": "^1.63.4",
+    "vite-plugin-svgr": "^3.2.0"
   },
   "devDependencies": {
     "@types/react": "^18.0.37",
